ajout d'un spinner + build du jar

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,11 @@
 
-<button (click)="load()">Recharger</button>
+<div class="page">
+  <div>
+    <button (click)="load()">Recharger</button>
+  </div>
 
 <div *ngIf="dashboard?.listJournees" class="container">
+  <div>Date de la version: {{dashboard.date | date:'d/MM/yyyy HH:mm:ss'}}</div>
   <div *ngFor="let journee of dashboard.listJournees" class="liste-journees">
     <div class="resume-journee">
       <div>Journée : {{journee.date}}</div>
@@ -22,5 +26,8 @@
     <hr/>
   </div>
 </div>
+</div>
+
+<app-spinner></app-spinner>
 
 <!--<router-outlet></router-outlet>-->
