--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -12,7 +12,11 @@
 .resume-journee{
   display: flex;
   flex-direction: row;
+  div {
+    margin-right: 20px;
+  }
 }
+
 
 .details-journee {
   display: flex;
@@ -43,4 +47,10 @@
 .statut{
   border-left: 1px solid;
   border-right: 1px solid;
+}
+
+.page {
+  //width: 100%;
+  display: flex;
+  flex-direction: column;
 }
